--- a/Casos_Uso/index.html
+++ b/Casos_Uso/index.html
@@ -5,9 +5,75 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="CSS/index.css">
+    <title>Lista de Casos de Uso</title>
 </head>
+<style>
+    *{padding: 0;margin: 0;font-family: sans-serif;}
+    body{background: lightgrey;}
+    header{background-color: grey;}
+    h1{padding: 20px;text-align: center; color: white;}
+    section{text-align: center;}
+    a{display: inline-block;background: white;width: 200px;height: 100px;color: black;text-decoration:none; margin:20px; border-radius: 10px}
+    div{width: 100%;height: 100%;}
+    p{margin-top:40px;}
+</style>
+
 <body>
+<header>
+    <h1>Menú de los casos de uso</h1>
+</header>
+
+<section>
+    <a href="CU01.html">
+        <div><p>CU1</p></div>
+    </a>
+    <a href="CU02.html">
+        <div><p>CU2</p></div>
+    </a>
+    <a href="CU03.html">
+        <div><p>CU3</p></div>
+    </a>
+    <a href="CU04.html">
+        <div><p>CU4</p></div>
+    </a>
+    <a href="CU05.html">
+        <div><p>CU5</p></div>
+    </a>
+    <a href="CU06.html">
+        <div><p>CU6</p></div>
+    </a>
+    <a href="CU07.html">
+        <div><p>CU7</p></div>
+    </a>
+    <a href="CU08.html">
+        <div><p>CU8</p></div>
+    </a>
+    <a href="CU09.html">
+        <div><p>CU9</p></div>
+    </a>
+    <a href="CU10.html">
+        <div><p>CU10</p></div>
+    </a>
+    <a href="CU11.html">
+        <div><p>CU11</p></div>
+    </a>
+    <a href="CU12.html">
+        <div><p>CU12</p></div>
+    </a>
+    <a href="CU13.html">
+        <div><p>CU13</p></div>
+    </a>
+    <a href="CU14.html">
+        <div><p>CU14</p></div>
+    </a>
+    <a href="CU15.html">
+        <div><p>CU15</p></div>
+    </a>
+    <a href="CU16.html">
+        <div><p>CU16</p></div>
+    </a>
+</section>
 
 </body>
 </html>
