--- a/Casos_Uso/CU02.html
+++ b/Casos_Uso/CU02.html
@@ -71,6 +71,13 @@
             <li>El mismo nombre de usuario (es únuico)</li>
             <li>El mismo correo electrónico (es único)</li>
           </ul>
+            <li>No poder registrar al usuario porque no cumple el formato correcto:
+              <ul>
+                <li>Usuario: no pudede contener caracteres como < > / '...</li>
+                <li>Contraseña: debe de tener mayúsculas, minúsculas, números como mínimo</li>
+                <li>Correo: debe de tener @</li>
+              </ul>
+            </li>
         </li>
         </li>
       </ul>
