--- a/Casos_Uso/CU04.html
+++ b/Casos_Uso/CU04.html
@@ -14,25 +14,25 @@
 <table>
   <tr>
     <th>Id</th>
-    <td>CU</td>
+    <td>CU4</td>
   </tr>
   <tr>
     <th>Nombre</th>
-    <td></td>
+    <td>Ver estadísticas</td>
   </tr>
   <tr>
     <th>Actores</th>
-    <td></td>
+    <td>Usuarios</td>
   </tr>
   <tr>
     <th>Descripción</th>
-    <td></td>
+    <td>Se podrán ver las estadísticas en la aplicación. (Tipo de articulos más vendido, los mejores valorado de la app, quien es el que más ha vendido / comprado...)</td>
   </tr>
   <tr>
     <th>Precondiciones</th>
     <td>
       <ul>
-        <li> </li>
+        <li>El usuario debe de estar logueado en la app</li>
       </ul>
     </td>
   </tr>
@@ -40,7 +40,8 @@
     <th>Secuencia normal</th>
     <td>
       <ol>
-        <li><li>
+        <li>El usuario clicará en el link "Estadísticas" del menú de arriba</li>
+        <li>Accederá a una página de las estadísticas</li>
       </ol>
     </td>
   </tr>
@@ -48,7 +49,7 @@
     <th>Postcondiciones</th>
     <td>
       <ul>
-        <li></li>
+        <li>Una vez en la página de estadísticas, podra ver toda la información que he comentado en la descripción.</li>
       </ul>
     </td>
   </tr>
@@ -56,7 +57,7 @@
     <th>Secuencia alternativa</th>
     <td>
       <ul>
-        <li> </li>
+        <li>Que no haya podido acceder a es emenú por un fallo en el servidor</li>
       </ul>
     </td>
   </tr>
