--- a/Casos_Uso/CU05.html
+++ b/Casos_Uso/CU05.html
@@ -14,25 +14,26 @@
 <table>
   <tr>
     <th>Id</th>
-    <td>CU</td>
+    <td>CU5</td>
   </tr>
   <tr>
     <th>Nombre</th>
-    <td></td>
+    <td>Editar el perfil</td>
   </tr>
   <tr>
     <th>Actores</th>
-    <td></td>
+    <td>Usuarios</td>
   </tr>
   <tr>
     <th>Descripción</th>
-    <td></td>
+    <td>Podemos editar nuestro perfil, para agregarle información o cambiarla. Podemos introducir una descripción, nuestra localidad, el CP... ya que es importante
+    a la hora de utilizar estas aplicaciones de compra venta</td>
   </tr>
   <tr>
     <th>Precondiciones</th>
     <td>
       <ul>
-        <li> </li>
+        <li>Debemos de estar registrados en la aplicación y logueados en ese momento con la cuenta a la que queramos cambiar el perfil</li>
       </ul>
     </td>
   </tr>
@@ -40,7 +41,11 @@
     <th>Secuencia normal</th>
     <td>
       <ol>
-        <li><li>
+        <li>Accedemos a la aplicación con un usuario.</li>
+        <li>Le damos al icono que tenemos en nuestro menu arriba, para acceder a nuestro perfil.</li>
+        <li>Accedemos a una pantalla donde veremos toda nuestra iformación.</li>
+        <li>Realizamos las modificaciones que queramos</li>
+        <li>Guardamos el resultado dandole al boton de guardar</li>
       </ol>
     </td>
   </tr>
@@ -48,7 +53,8 @@
     <th>Postcondiciones</th>
     <td>
       <ul>
-        <li></li>
+        <li>Dentro de esta pantalla podemos modificar o agregar información</li>
+        <li>En esta pantalla podremos ver nuestros productos, los que hemos comprado, los que tenemos en favoritos...</li>
       </ul>
     </td>
   </tr>
@@ -56,7 +62,7 @@
     <th>Secuencia alternativa</th>
     <td>
       <ul>
-        <li> </li>
+        <li>El usuario no haya podido guardar los cambios porque ha querido modificar el correo o el usuario y ya estaba en uso</li>
       </ul>
     </td>
   </tr>
