--- a/Casos_Uso/CU07.html
+++ b/Casos_Uso/CU07.html
@@ -14,25 +14,25 @@
 <table>
   <tr>
     <th>Id</th>
-    <td>CU</td>
+    <td>CU7</td>
   </tr>
   <tr>
     <th>Nombre</th>
-    <td></td>
+    <td>Listar productos</td>
   </tr>
   <tr>
     <th>Actores</th>
-    <td></td>
+    <td>Usuarios</td>
   </tr>
   <tr>
     <th>Descripción</th>
-    <td></td>
+    <td>Podremos filtrar los productos que queramos en la aplicación, aparte de buscar algún producto específico que queramos</td>
   </tr>
   <tr>
     <th>Precondiciones</th>
     <td>
       <ul>
-        <li> </li>
+        <li>Debemos de estar logueados en la aplicación</li>
       </ul>
     </td>
   </tr>
@@ -40,7 +40,8 @@
     <th>Secuencia normal</th>
     <td>
       <ol>
-        <li><li>
+        <li>Iremos a la pantalla inicial de la aplicación que es la lista de los productos de la aplicacion.</li>
+        <li>Filtraremos y buscaremos los productos que queramos.</li>
       </ol>
     </td>
   </tr>
@@ -48,7 +49,8 @@
     <th>Postcondiciones</th>
     <td>
       <ul>
-        <li></li>
+        <li>Nos mostrará la lista con todos los productos que hemos filtrado</li>
+        <li>Podemos seleccionar el producto que queramos y nos mostrara toda la información, con su vendedor y la opción de agregarlo a favoritos o de contactar con el vendedor</li>
       </ul>
     </td>
   </tr>
@@ -56,7 +58,7 @@
     <th>Secuencia alternativa</th>
     <td>
       <ul>
-        <li> </li>
+        <li>Que no muestre ningún producto ya que no hay productos con esas características que hemos filtrado</li>
       </ul>
     </td>
   </tr>
