--- a/Casos_Uso/CU06.html
+++ b/Casos_Uso/CU06.html
@@ -14,25 +14,26 @@
 <table>
   <tr>
     <th>Id</th>
-    <td>CU</td>
+    <td>CU6</td>
   </tr>
   <tr>
     <th>Nombre</th>
-    <td></td>
+    <td>Chatear</td>
   </tr>
   <tr>
     <th>Actores</th>
-    <td></td>
+    <td>Usuarios</td>
   </tr>
   <tr>
     <th>Descripción</th>
-    <td></td>
+    <td>En la aplicación podemos chatear con otro usuario para la compra de uno de los productos que tiene en venta</td>
   </tr>
   <tr>
     <th>Precondiciones</th>
     <td>
       <ul>
-        <li> </li>
+        <li>Estar logueado en la aplicación</li>
+        <li>Que haya un producto de por medio para poder negociar, si no no se podrá</li>
       </ul>
     </td>
   </tr>
@@ -40,7 +41,9 @@
     <th>Secuencia normal</th>
     <td>
       <ol>
-        <li><li>
+        <li>Buscamos un producto que esté en venta en la app</li>
+        <li>Le damos al boton de "contactar"</li>
+        <li>Nos saltará a un chat para poder enviarle un mensaje a ese usuario</li>
       </ol>
     </td>
   </tr>
@@ -48,7 +51,8 @@
     <th>Postcondiciones</th>
     <td>
       <ul>
-        <li></li>
+        <li>En la pantalla de los mensajes veran todos los chats que tienen con los usuarios.</li>
+        <li>AL entrar en un chat, se verán todos los mensjaes que se han realizado con su hora.</li>
       </ul>
     </td>
   </tr>
@@ -56,7 +60,7 @@
     <th>Secuencia alternativa</th>
     <td>
       <ul>
-        <li> </li>
+        <li>No se puedan enviar o recibir mensajes por problemas en el servidor</li>
       </ul>
     </td>
   </tr>
