--- a/Casos_Uso/CU07.html
+++ b/Casos_Uso/CU07.html
@@ -40,7 +40,7 @@
     <th>Secuencia normal</th>
     <td>
       <ol>
-        <li>Iremos a la pantalla inicial de la aplicación que es la lista de los productos de la aplicacion.</li>
+        <li>Iremos a la pantalla inicial de la aplicación que es la lista de los productos de la aplicación.</li>
         <li>Filtraremos y buscaremos los productos que queramos.</li>
       </ol>
     </td>
@@ -58,7 +58,7 @@
     <th>Secuencia alternativa</th>
     <td>
       <ul>
-        <li>Que no muestre ningún producto ya que no hay productos con esas características que hemos filtrado</li>
+        <li>Que no muestre ningún producto, ya que no hay productos con esas características que hemos filtrado</li>
       </ul>
     </td>
   </tr>
