--- a/Casos_Uso/CU10.html
+++ b/Casos_Uso/CU10.html
@@ -14,25 +14,26 @@
 <table>
   <tr>
     <th>Id</th>
-    <td>CU</td>
+    <td>CU10</td>
   </tr>
   <tr>
     <th>Nombre</th>
-    <td></td>
+    <td>Vender un producto</td>
   </tr>
   <tr>
     <th>Actores</th>
-    <td></td>
+    <td>Usuarios</td>
   </tr>
   <tr>
     <th>Descripción</th>
-    <td></td>
+    <td>Los usuarios podrán vender los productos que tiene en la aplicación.</td>
   </tr>
   <tr>
     <th>Precondiciones</th>
     <td>
       <ul>
-        <li> </li>
+        <li>Que tengamos un producto subido a la aplicación.</li>
+        <li>Que el artículo que se quiera comprar sea nuestro.</li>
       </ul>
     </td>
   </tr>
@@ -40,7 +41,9 @@
     <th>Secuencia normal</th>
     <td>
       <ol>
-        <li><li>
+        <li>Un usuario selecciona un producto nuestro que le sea de interés.</li>
+        <li>Ese usuario que quiere comprar un producto nuestro, le de al botón de comprar.</li>
+        <li>El vendedor debe aceptar o rechazar la compra, dependiendo de si es rentable (por motivos de desplazamiento u otros)</li>
       </ol>
     </td>
   </tr>
@@ -48,7 +51,7 @@
     <th>Postcondiciones</th>
     <td>
       <ul>
-        <li></li>
+        <li>El producto será y aparecerá como vendido en la aplicación.</li>
       </ul>
     </td>
   </tr>
@@ -56,7 +59,7 @@
     <th>Secuencia alternativa</th>
     <td>
       <ul>
-        <li> </li>
+        <li>Que no se le pueda vender a un usuario en concreto porque ese producto justo ha sido reservado para otra persona.</li>
       </ul>
     </td>
   </tr>
