--- a/Casos_Uso/CU12.html
+++ b/Casos_Uso/CU12.html
@@ -14,25 +14,25 @@
 <table>
   <tr>
     <th>Id</th>
-    <td>CU</td>
+    <td>CU12</td>
   </tr>
   <tr>
     <th>Nombre</th>
-    <td></td>
+    <td>Añadir a favoritos los productos</td>
   </tr>
   <tr>
     <th>Actores</th>
-    <td></td>
+    <td>Usuarios</td>
   </tr>
   <tr>
     <th>Descripción</th>
-    <td></td>
+    <td>Podemos agregar los productos de nuestro interés a favoritos y estos poder verlos desde nuestro perfil para su facilidad.</td>
   </tr>
   <tr>
     <th>Precondiciones</th>
     <td>
       <ul>
-        <li> </li>
+        <li>El producto que queremos agregar no le tengamos ya agregado, porque si le damos de nuevo se cancelará el tenerlo en favoritos.</li>
       </ul>
     </td>
   </tr>
@@ -40,7 +40,8 @@
     <th>Secuencia normal</th>
     <td>
       <ol>
-        <li><li>
+        <li>Buscamos un producto que tengamos interés en él.</li>
+        <li>Le damos al corazón que hay para agregarle a favoritos</li>
       </ol>
     </td>
   </tr>
@@ -48,7 +49,7 @@
     <th>Postcondiciones</th>
     <td>
       <ul>
-        <li></li>
+        <li>El producto ha sido agregado a favoritos y podremos verlo en nuestro perfil.</li>
       </ul>
     </td>
   </tr>
@@ -56,7 +57,7 @@
     <th>Secuencia alternativa</th>
     <td>
       <ul>
-        <li> </li>
+        <li>No lo hemos podido agregar porque ya lo teníamos agregado anteriormente.</li>
       </ul>
     </td>
   </tr>
