--- a/Casos_Uso/CU08.html
+++ b/Casos_Uso/CU08.html
@@ -14,25 +14,26 @@
 <table>
   <tr>
     <th>Id</th>
-    <td>CU</td>
+    <td>CU8</td>
   </tr>
   <tr>
     <th>Nombre</th>
-    <td></td>
+    <td>Subir productos</td>
   </tr>
   <tr>
     <th>Actores</th>
-    <td></td>
+    <td>Usuarios</td>
   </tr>
   <tr>
     <th>Descripción</th>
-    <td></td>
+    <td>Explicación de como podemos subir artículos en la aplicación .</td>
   </tr>
   <tr>
     <th>Precondiciones</th>
     <td>
       <ul>
-        <li> </li>
+        <li>Debemos de estar registrados</li>
+        <li>No podemos superar el límite de productos subidos (100)</li>
       </ul>
     </td>
   </tr>
@@ -40,7 +41,15 @@
     <th>Secuencia normal</th>
     <td>
       <ol>
-        <li><li>
+        <li>Vamos al menú de "Subir artículo"</li>
+        <li>Elegimos y subimos las características del producto:
+          <ul>
+            <li>Descripción del producto.</li>
+            <li>Elección de la categoría que es.</li>
+            <li>Imágenes del producto.</li>
+          </ul>
+        </li>
+        <li>Damos al botón de subir producto cuando hayamos terminado</li>
       </ol>
     </td>
   </tr>
@@ -48,7 +57,8 @@
     <th>Postcondiciones</th>
     <td>
       <ul>
-        <li></li>
+        <li>El producto se ha guardado en la Base de Datos correctamente.</li>
+        <li>Se mostrará en la aplicación, tanto en nuestro perfil como en la de todos los productos.</li>
       </ul>
     </td>
   </tr>
@@ -56,7 +66,7 @@
     <th>Secuencia alternativa</th>
     <td>
       <ul>
-        <li> </li>
+        <li>No se ha guardado el artículo correctamente porque superábamos el límite o porque ha habido un fallo por el servidor</li>
       </ul>
     </td>
   </tr>
