--- a/Casos_Uso/CU11.html
+++ b/Casos_Uso/CU11.html
@@ -14,25 +14,25 @@
 <table>
   <tr>
     <th>Id</th>
-    <td>CU</td>
+    <td>CU11</td>
   </tr>
   <tr>
     <th>Nombre</th>
-    <td></td>
+    <td>Eliminar un producto</td>
   </tr>
   <tr>
     <th>Actores</th>
-    <td></td>
+    <td>Usuario</td>
   </tr>
   <tr>
     <th>Descripción</th>
-    <td></td>
+    <td>Podemos eliminar productos que nosotros hayamos subido porque hayamos cambiado de opinión o por otras causas.</td>
   </tr>
   <tr>
     <th>Precondiciones</th>
     <td>
       <ul>
-        <li> </li>
+        <li>Tener subido el producto que queremos eliminar</li>
       </ul>
     </td>
   </tr>
@@ -40,7 +40,10 @@
     <th>Secuencia normal</th>
     <td>
       <ol>
-        <li><li>
+        <li>El usuario va al apartado de productos en venta de su propio perfil. </li>
+        <li>Seleccionamos el producto que queremos eliminar.</li>
+        <li>Le damos al botón de eliminar producto.</li>
+        <li>Confirmamos la eliminación del producto.</li>
       </ol>
     </td>
   </tr>
@@ -48,7 +51,7 @@
     <th>Postcondiciones</th>
     <td>
       <ul>
-        <li></li>
+        <li>El producto ya no aparece en el perfil.</li>
       </ul>
     </td>
   </tr>
@@ -56,7 +59,7 @@
     <th>Secuencia alternativa</th>
     <td>
       <ul>
-        <li> </li>
+        <li>No se ha eliminado el producto porque no hemos aceptado posteriormente.</li>
       </ul>
     </td>
   </tr>
