Bloqueo en JS del Register y en PHP

--- a/WebMart/información.html
+++ b/WebMart/información.html
@@ -14,7 +14,7 @@
     <nav>
         <ul>
             <a href="index.php"><li>Inicio</li></a>
-            <a href="información.php"><li class="liActive">Información</li></a>
+            <a class="liActive" href="información.html"><li>Información</li></a>
             <a href="contacto.php"><li>Contacto</li></a>
         </ul>
     </nav>
