Header y Footer 100% responsives y funcionales

--- a/WebMart/información.html
+++ b/WebMart/información.html
@@ -17,8 +17,8 @@
     <nav>
         <ul>
             <a href="index.php"><li>Inicio</li></a>
-            <a class="liActive" href="información.html"><li>Información</li></a>
-            <a href="contacto.php"><li>Contacto</li></a>
+            <a href="información.html"><li>Información</li></a>
+            <a class="liActive" href="contacto.php"><li>Contacto</li></a>
         </ul>
     </nav>
 
@@ -32,9 +32,15 @@
 <footer>
     <div>
         <p>Creado por Javier Calvo Porro</p>
-        <img id="github" src="IMG/LOGOS_ERRORES/github.png" alt="Github"> Proyecto subido a Github
+        <table>
+            <tr>
+                <td><img id="github" src="IMG/LOGOS_ERRORES/github.png" alt="Github"></td>
+                <td><a href="https://github.com/Javier0703/APP-WebMart" target="_blank">Disponible en GitHub</a></td>
+            </tr>
+        </table>
     </div>
 </footer>
+
 </body>
 <script src="JS/openMenu.js"></script>
 </html>
